terminamos ya registra las tareas y solucione errores

--- a/gestion/templates/listar.html
+++ b/gestion/templates/listar.html
@@ -6,10 +6,10 @@
     <title>listar</title>
 </head>
 <body>
-    {% for tarea in Tareas %}
-    {{tareas.titulo}}
-    {{tareas.descripcion}}
-    {{tareas.estado}}
+    {% for tarea in tareas %}
+    {{tarea.titulo}}
+    {{tarea.descripcion}}
+    {{tarea.estado}}
     {% endfor%}
     
 </body>
