--- a/gestion/templates/listar.html
+++ b/gestion/templates/listar.html
@@ -4,14 +4,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>listar</title>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 <body>
-    {% for tarea in tareas %}
-    {{tarea.titulo}}
-    {{tarea.descripcion}}
-    {{tarea.estado}}
-    {% endfor%}
-    
+    <div class="container mt-5">
+        <h1 class="mb-4">Lista de Tareas</h1>
+        <div class="row">
+            {% for tarea in tareas %}
+            <div class="col-md-4 mb-4">
+                <div class="card">
+                    <div class="card-body">
+                        <h5 class="card-title">{{ tarea.titulo }}</h5>
+                        <p class="card-text">{{ tarea.descripcion }}</p>
+                        <p class="card-text">
+                            <strong>Estado:</strong> {{ tarea.estado }}
+                        </p>
+                    </div>
+                </div>
+            </div>
+            {% endfor %}
+        </div>
+    </div>
 </body>
 </html>
 
